# ranote

./: .editorconfig  Cargo.toml  README.md
core/: Cargo.toml
core/examples/: err.rs
core/src/: cmd.rs  doc.rs  error.rs  file.rs  lib.rs  main.rs  note.rs  utils.rs  wkspace.rs
core/tests/: doc.rs  note.rs
front/: Cargo.toml
front/src/: error.rs  lib.rs
src/: main.rs
src/ui/: package.json  tslint.json
src/ui/src/: App.vue  RFC.ts  globals.d.ts  main.ts
src/ui/src/components/: LeftBar.vue
src/ui/src/views/: About.vue  Editor.vue  Home.vue
ui/: README.md  package.json  tsconfig.json  tslint.json  vue.config.js
ui/public/: index.html
ui/src/: App.vue  RFC.ts  globals.d.ts  main.ts  router.ts  store.ts  types.ts
ui/src/assets/: main.scss
ui/src/components/: LeftBar.vue  MiddleBar.vue
ui/src/views/: Editor.vue  Preview.vue
wv/: Cargo.toml
wv/examples/: simple.rs
wv/src/: edge.rs  edge_winit.rs  main.rs
