[package]
name = "ranote"
version = "0.1.0"
authors = ["rrandom <emanonhere@gmail.com>"]
edition = "2018"


[workspace]
members = [
  "core",
  "wv",
  "front"
]

[dependencies]
core = { path = "core" }
front = { path = "front" }
wv = { path = "wv" }

slog = "2.4.1"
slog-term = "2.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
