[package]
name = "core"
version = "0.1.0"
authors = ["rrandom <emanonhere@gmail.com>"]
edition = "2018"

[dependencies]
web-view = "0.4.1"
dirs = "2.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.5"
tempfile = "3.0.8"
slog = "2.4.1"
slog-term = "2.4.0"
uuid = { version = "0.7", features = ["serde", "v4"] }

[dependencies.front]
path = "../front"
