[package]
name = "front"
version = "0.1.0"
authors = ["rrandom <emanonhere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
regex = "1"
toml = "0.5"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
